# vtmk

./: .gitignore  Cargo.toml  LICENCE-Apache  LICENCE-MIT  README.md
src/: command.yaml  file-add.rs  lib.rs  main.rs  reading.rs  uuid.rs  zipping.rs
