[package]
name = "VTMK"
version = "0.1.0"
edition = "2021"
description = """
    Multi-purpose file management software.
"""
readme = "README.md"
repository = "https://github.com/VTMK-project/vtmk"
license = "MIT OR Apache-2.0"
keywords = ["versionmanage"]
categories = ["filesystem","command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd-safe = "4.1.1+zstd.1.5.0"
zstd-sys = "1.6.1+zstd.1.5.0"
uuid = { version = "0.8.2", features = ["serde","v4"] }
clap = { version = "3.0.0-beta.5", features = ["yaml","env","color","suggestions","unicode"] }
anyhow = "1.0.51"
